add AbstractDataPackageDeserializer